--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,14 +3,107 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_horizontal"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.aarontseng.createdbyaaron.MainActivity">
 
-    <Button
+    <LinearLayout
+        android:id="@+id/id_ll"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/id_tv_title"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="My Nanodegree Apps"
+            android:textSize="26sp"
+            android:singleLine="true"
+            android:onClick="btOnClick"
+            />
+
+        <Button
+            android:id="@+id/id_bt_1"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="@string/bt_1"
+            android:textSize="20sp"
+            android:textColor="@color/white"
+            android:background="@color/bt_color"
+            android:layout_marginTop="5dp"
+            android:singleLine="true"
+            android:onClick="btOnClick"
+            />
+        <Button
+            android:id="@+id/id_bt_2"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="@string/bt_2"
+            android:textSize="20sp"
+            android:textColor="@color/white"
+            android:background="@color/bt_color"
+            android:layout_marginTop="5dp"
+            android:singleLine="true"
+            android:onClick="btOnClick"
+            />
+        <Button
+            android:id="@+id/id_bt_3"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="@string/bt_3"
+            android:textSize="20sp"
+            android:textColor="@color/white"
+            android:background="@color/bt_color"
+            android:layout_marginTop="5dp"
+            android:singleLine="true"
+            android:onClick="btOnClick"
+            />
+        <Button
+            android:id="@+id/id_bt_4"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="@string/bt_4"
+            android:textSize="20sp"
+            android:textColor="@color/white"
+            android:background="@color/bt_color"
+            android:layout_marginTop="5dp"
+            android:singleLine="true"
+            android:onClick="btOnClick"
+            />
+        <Button
+            android:id="@+id/id_bt_5"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="@string/bt_5"
+            android:textSize="20sp"
+            android:textColor="@color/white"
+            android:background="@color/bt_color"
+            android:layout_marginTop="5dp"
+            android:singleLine="true"
+            android:onClick="btOnClick"
+            />
+        <Button
+            android:id="@+id/id_bt_6"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="@string/bt_6"
+            android:textSize="20sp"
+            android:textColor="@color/white"
+            android:background="@color/bt_color"
+            android:layout_marginTop="5dp"
+            android:singleLine="true"
+            android:onClick="btOnClick"
+            />
+    </LinearLayout>
 </RelativeLayout>
