添加了按钮点击效果
按钮效果分为默认（不点击状态）和按下状态

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
             android:text="@string/bt_1"
             android:textSize="20sp"
             android:textColor="@color/white"
-            android:background="@color/bt_color"
+            android:background="@drawable/bt_selector"
             android:layout_marginTop="5dp"
             android:singleLine="true"
             android:onClick="btOnClick"
@@ -48,7 +48,7 @@
             android:text="@string/bt_2"
             android:textSize="20sp"
             android:textColor="@color/white"
-            android:background="@color/bt_color"
+            android:background="@drawable/bt_selector"
             android:layout_marginTop="5dp"
             android:singleLine="true"
             android:onClick="btOnClick"
@@ -61,7 +61,7 @@
             android:text="@string/bt_3"
             android:textSize="20sp"
             android:textColor="@color/white"
-            android:background="@color/bt_color"
+            android:background="@drawable/bt_selector"
             android:layout_marginTop="5dp"
             android:singleLine="true"
             android:onClick="btOnClick"
@@ -74,7 +74,7 @@
             android:text="@string/bt_4"
             android:textSize="20sp"
             android:textColor="@color/white"
-            android:background="@color/bt_color"
+            android:background="@drawable/bt_selector"
             android:layout_marginTop="5dp"
             android:singleLine="true"
             android:onClick="btOnClick"
@@ -87,7 +87,7 @@
             android:text="@string/bt_5"
             android:textSize="20sp"
             android:textColor="@color/white"
-            android:background="@color/bt_color"
+            android:background="@drawable/bt_selector"
             android:layout_marginTop="5dp"
             android:singleLine="true"
             android:onClick="btOnClick"
@@ -100,7 +100,7 @@
             android:text="@string/bt_6"
             android:textSize="20sp"
             android:textColor="@color/white"
-            android:background="@color/bt_color"
+            android:background="@drawable/bt_selector"
             android:layout_marginTop="5dp"
             android:singleLine="true"
             android:onClick="btOnClick"
