--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="bt_color">#2E3D49</color>
     <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
 </resources>
